@@ -46,4 +46,3 @@ t/20_alias.t
 t/30_request.t
 t/lib/ProductTest/Test1Handler.pm
 t/lib/ProductTest/Test2Handler.pm
-TODO
