@@ -1,6 +1,6 @@
 ---
 name: jmx4perl
-version: 0.15_5
+version: 0.15
 author:
   - Roland Huss (roland@cpan.org)
 abstract: Easy JMX access to Java Applications
@@ -26,7 +26,7 @@ recommends:
 provides:
   JMX::Jmx4Perl:
     file: lib/JMX/Jmx4Perl.pm
-    version: 0.15_5
+    version: 0.15
   JMX::Jmx4Perl::Agent:
     file: lib/JMX/Jmx4Perl/Agent.pm
     version: 0
