@@ -26,8 +26,8 @@ short description of the alias
 =item $alias->default()
 
 default values for an alias, which can be overwritten by a specific
-L<JMX::Jmx4Perl::Product>. This an arrayref with two values: The MBean's
-name and the attribute or operation name.
+L<JMX::Jmx4Perl::Product::BaseHandler>. This is an arrayref with two values:
+The MBean's name and the attribute or operation name.
 
 =item $alias->type()
 
